primo commit pasquale

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "invito-compleanno",
+  "name": "invito-compleanno-pasquale",
   "version": "0.1.0",
   "private": true,
   "scripts": {
